2004-08-12 Ian Rutt
 * Added comments to several files: glide_pdd.f90, glimmer_CFproj.f90,
   glimmer_config.f90, glimmer_example.f90.
 * Corrected passing of temperature range within model - should be the
   half-range, so divided range by two in glimmer.f90

2004-08-10 Ian Rutt
 * Updated top-level information files
 * Cleared out unneccessary variables and things from makefile.arc files

2004-08-04 Ian Rutt
 * Completed new PDD code, with Romberg integration from a
   ACM public domain routine (Algorithm 60). This has been tested, and
   should work. Removed glimmer_degd.f90, since this is now redundant.
 * Updated Unix build system to deal with new file.

2004-07-18 Ian Rutt
 * Added new coding of PDD routines, without any NR code,
   (glide_pdd.f90), but not "plumbed in" yet.

2004-07-01 Ian Rutt
 * Added documentation comments to glide_messages.f90

2004-06-30 Ian Rutt
 * Completed standardisation of message system - six levels are provided,
 from 'diagnostics' to 'fatal errors'. The overall message level can be
 set by calling glide_set_msg_level. Two output subroutines are provided:
 glide_msg and glide_stars; the latter prints a line of 70 stars across
 the screen. 
	
2004-06-30 Ian Rutt
 * Fixed Linux build system after my changes yesterday (the problems of
 doing development under Windows...)

2004-06-29 Ian Rutt
 * Began standardisation of GLIMMER's use of standard output, using new module
 called glide_messages. NetCDF usage of this not completed yet.

2004-06-28 Ian Rutt
 * Changed relaxed.f90 so that the relaxed topography is set to just below
 zero in masked areas.

2004-06-18 Ian Rutt
 * Added possibility of reading in fields from netcdf file scaled or
   unscaled
 * Added code to calculate relaxed bedrock and add it to netcdf input file
   (relaxed.f90)

2004-06-18 Magnus Hagdorn
 * glimmer_CFproj.f90: make a distinction between polar_stereographic and 
   general stereographic projections. Add a standard parallel to 
   polar_stereographic
